# AED

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
include/: calc.h  simple_linked.h
src/: CMakeLists.txt  calc.c  ex1.c  simple_linked.c
tests/: CMakeLists.txt  Makefile  list_linked_test.c  test_calculadora.c
